--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1>Jennifer Trevizo</h1>
       <nav>
         <ul>
-          <li>About Me</li>
-          <li>Work</li>
-          <li>Contact Me</li>
+          <li><a href="#aboutme">About Me</a></li>
+          <li><a href='#work'>Work</a></li>
+          <li> <a href='#contactme'>Contact Me</a></li>
           <li>Resume</li>
         </ul>
       </nav>
@@ -27,18 +27,32 @@
       <figcaption>Quote</figcaption>
     </figure>
     <main>
-      <section>
+      <section id="aboutme" class="card" >
         <h2>About Me</h2>
-        <p>Some things about me</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.<br />Sed ut
+          perspiciatis unde omnis iste natus error sit voluptatem accusantium
+          doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+          inventore veritatis et quasi architecto beatae vitae dicta sunt
+          explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+          odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+          voluptatem sequi nesciunt.
+        </p>
       </section>
-      <section>
+
+      <section id="work">
         <h2>Work</h2>
       </section>
-    </main>
-    <footer>
-      <section>
+
+      <section id="contactme">
         <h2>Contact Me</h2>
-        <ul>
+        <ul class="flex-row">
           <li>555-867-5309</li>
           <li>
             <a href="mailto:jenny.trevizo2013@gmail.com"
@@ -48,6 +62,6 @@
           <li><a href="https://github.com/jtrevz">GitHub</a></li>
         </ul>
       </section>
-    </footer>
+    </main>
   </body>
 </html>
