css styling and main page layout

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       <nav>
         <ul>
           <li><a href="#aboutme">About Me</a></li>
-          <li><a href='#work'>Work</a></li>
-          <li> <a href='#contactme'>Contact Me</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contactme">Contact Me</a></li>
           <li>Resume</li>
         </ul>
       </nav>
     </header>
     <figure>
       <img
-        src="https://www.wallpapertip.com/wmimgs/15-157431_desktop-background-art-nouveau.jpg"
+        src="https://images.collection.cooperhewitt.org/95836_c6c809393f926e5c_b.jpg"
       />
-      <figcaption>Quote</figcaption>
+      <figcaption>HIRE ME!</figcaption>
     </figure>
     <main>
-      <section id="aboutme" class="card" >
-        <h2>About Me</h2>
+      <section id="aboutme" class="annoying">
+        <h2>About<br />Me</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -46,13 +46,65 @@
         </p>
       </section>
 
-      <section id="work">
+      <section id="work" class="annoying">
         <h2>Work</h2>
+        <div class="workflex">
+          <article class="annoying">
+            <h3>Noodle Work</h3>
+            <a href="https://github.com/jtrevz" class="mainwork">
+              <img
+                src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
+                alt="Art Nouveau Flower Wallpaper"
+                class="mainwork"
+              />
+            </a>
+          </article>
+          <article class="annoying">
+            <h3>Color Palatte</h3>
+            <a href="https://github.com/jtrevz" class="mainwork">
+              <img
+                src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
+                alt="Art Nouveau Flower Wallpaper"
+                class="mainwork"
+              />
+            </a>
+            <p class="left">l</p>
+            <h3>Design Guide</h3>
+            <a href="https://github.com/jtrevz" class="mainwork">
+              <img
+                src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
+                alt="Art Nouveau Flower Wallpaper"
+                class="mainwork"
+              />
+            </a>
+          </article>
+          <article class="annoying">
+            <h3>Canvas</h3>
+            <a href="https://github.com/jtrevz" class="mainwork">
+              <img
+                src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
+                alt="Art Nouveau Flower Wallpaper"
+                class="mainwork"
+              />
+            </a>
+            <p class="left">l</p>
+            <h3>Graph Guide</h3>
+            <a href="https://github.com/jtrevz" class="mainwork">
+              <img
+                src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
+                alt="Art Nouveau Flower Wallpaper"
+                class="mainwork"
+              />
+            </a>
+          </article>
+        </div>
       </section>
-
-      <section id="contactme">
-        <h2>Contact Me</h2>
-        <ul class="flex-row">
+      <section id="contactme" class="annoying">
+        <h2>
+          Contact<br />
+          Me
+        </h2>
+        <ul class="center contactCard">
           <li>555-867-5309</li>
           <li>
             <a href="mailto:jenny.trevizo2013@gmail.com"
