background image banner

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         </ul>
       </nav>
     </header>
-    <figure>
+    <figure class="banner">
       <img
         src="https://images.collection.cooperhewitt.org/95836_c6c809393f926e5c_b.jpg"
       />
-      <figcaption>HIRE ME!</figcaption>
+      <figcaption>
+        <h2>Hire me!</h2>
+      </figcaption>
     </figure>
     <main>
       <section id="aboutme" class="annoying">
