finishing changes, resume link, readme

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
           <li><a href="#aboutme">About Me</a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#contactme">Contact Me</a></li>
-          <li>Resume</li>
+          <li>
+            <a
+              href="https://ih1.redbubble.net/image.990479598.6272/farp,small,wall_texture,product,750x1000.jpg"
+              >Resume</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -30,7 +35,7 @@
     </figure>
     <main>
       <section id="aboutme" class="annoying">
-        <h2>About<br />Me</h2>
+        <h2>About Me</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -102,10 +107,7 @@
         </div>
       </section>
       <section id="contactme" class="annoying">
-        <h2>
-          Contact<br />
-          Me
-        </h2>
+        <h2>Contact Me</h2>
         <ul class="center contactCard">
           <li>555-867-5309</li>
           <li>
