added links to work and updated projects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+<!-- Heading: Name and easily Accesible Links to major sections in the website and resume -->
     <header>
       <h1>Jennifer Trevizo</h1>
       <nav>
@@ -25,15 +26,15 @@
         </ul>
       </nav>
     </header>
+  <!-- banner or background, the focal elements styling the top of the page -->
     <figure class="banner">
       <img
         src="https://images.collection.cooperhewitt.org/95836_c6c809393f926e5c_b.jpg"
       />
-      <figcaption>
-        <h2>Hire me!</h2>
-      </figcaption>
     </figure>
+  <!-- bulk of the page, all sections with information -->
     <main>
+      <!-- about me: brief description of myself and my experience in the technical field-->
       <section id="aboutme" class="annoying">
         <h2>About Me</h2>
         <p>
@@ -52,13 +53,14 @@
           voluptatem sequi nesciunt.
         </p>
       </section>
-
+<!-- Compiled work, links to all my applications and dispalyed work -->
       <section id="work" class="annoying">
         <h2>Work</h2>
         <div class="workflex">
+          <!-- Noodle work: work I want to highlight the most, takes doubel the size in computer browser and first -->
           <article class="annoying">
-            <h3>Noodle Work</h3>
-            <a href="https://github.com/jtrevz" class="mainwork">
+            <h3>Weather Forecast</h3>
+            <a href="https://jtrevz.github.io/weatherforecast/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -67,8 +69,8 @@
             </a>
           </article>
           <article class="annoying">
-            <h3>Color Palatte</h3>
-            <a href="https://github.com/jtrevz" class="mainwork">
+            <h3>What to Watch</h3>
+            <a href="https://hamzsait.github.io/WhatToWatch/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -76,8 +78,8 @@
               />
             </a>
             <p class="left">l</p>
-            <h3>Design Guide</h3>
-            <a href="https://github.com/jtrevz" class="mainwork">
+            <h3>Barb Quiz</h3>
+            <a href="https://jtrevz.github.io/barbquiz/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -86,8 +88,8 @@
             </a>
           </article>
           <article class="annoying">
-            <h3>Canvas</h3>
-            <a href="https://github.com/jtrevz" class="mainwork">
+            <h3>Password Generator</h3>
+            <a href="https://jtrevz.github.io/passwordgenerator/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -95,8 +97,8 @@
               />
             </a>
             <p class="left">l</p>
-            <h3>Graph Guide</h3>
-            <a href="https://github.com/jtrevz" class="mainwork">
+            <h3>Workday Planner</h3>
+            <a href="https://jtrevz.github.io/workdayplanner/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -106,6 +108,7 @@
           </article>
         </div>
       </section>
+      <!-- Ways to contact me and keep in touch with my ongoing work, direct links -->
       <section id="contactme" class="annoying">
         <h2>Contact Me</h2>
         <ul class="center contactCard">
