--- a/index.html
+++ b/index.html
@@ -19,48 +19,25 @@
           <li><a href="#contactme">Contact Me</a></li>
           <li>
             <a
-              href="https://ih1.redbubble.net/image.990479598.6272/farp,small,wall_texture,product,750x1000.jpg"
+              href="assets/JTREVIZORESUME March 2019.pdf"
               >Resume</a
             >
           </li>
         </ul>
       </nav>
-    </header>
-  <!-- banner or background, the focal elements styling the top of the page -->
-    <figure class="banner">
-      <img
-        src="https://images.collection.cooperhewitt.org/95836_c6c809393f926e5c_b.jpg"
-      />
-    </figure>
-  <!-- bulk of the page, all sections with information -->
-    <main>
-      <!-- about me: brief description of myself and my experience in the technical field-->
-      <section id="aboutme" class="annoying">
+    </header>id="aboutme" class="annoying">
         <h2>About Me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.<br />Sed ut
-          perspiciatis unde omnis iste natus error sit voluptatem accusantium
-          doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-          inventore veritatis et quasi architecto beatae vitae dicta sunt
-          explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-          odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-          voluptatem sequi nesciunt.
+          Adaptable and personable entry-level Full Stack Developer with proven communication, and analytical skills. Currently working as a Real Estate Agent and continuing software developer training in hopes to change careers. 
         </p>
-      </section>
 <!-- Compiled work, links to all my applications and dispalyed work -->
       <section id="work" class="annoying">
         <h2>Work</h2>
         <div class="workflex">
           <!-- Noodle work: work I want to highlight the most, takes doubel the size in computer browser and first -->
           <article class="annoying">
-            <h3>Weather Forecast</h3>
-            <a href="https://jtrevz.github.io/weatherforecast/" class="mainwork">
+            <h3>Foodie Digest</h3>
+            <a href="http://foodie-digest.herokuapp.com/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -97,8 +74,8 @@
               />
             </a>
             <p class="left">l</p>
-            <h3>Workday Planner</h3>
-            <a href="https://jtrevz.github.io/workdayplanner/" class="mainwork">
+            <h3>Weather Forecast</h3>
+            <a href="https://jtrevz.github.io/weatherforecast/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
