--- a/index.html
+++ b/index.html
@@ -19,17 +19,28 @@
           <li><a href="#contactme">Contact Me</a></li>
           <li>
             <a
-              href="assets/JTREVIZORESUME March 2019.pdf"
+              href="/assets/JTREVIZORESUME March 2019.pdf"
               >Resume</a
             >
           </li>
         </ul>
       </nav>
-    </header>id="aboutme" class="annoying">
+    </header>
+  <!-- banner or background, the focal elements styling the top of the page -->
+    <figure class="banner">
+      <img
+        src="https://images.collection.cooperhewitt.org/95836_c6c809393f926e5c_b.jpg"
+      />
+    </figure>
+  <!-- bulk of the page, all sections with information -->
+    <main>
+      <!-- about me: brief description of myself and my experience in the technical field-->
+      <section id="aboutme" class="annoying">
         <h2>About Me</h2>
         <p>
           Adaptable and personable entry-level Full Stack Developer with proven communication, and analytical skills. Currently working as a Real Estate Agent and continuing software developer training in hopes to change careers. 
         </p>
+      </section>
 <!-- Compiled work, links to all my applications and dispalyed work -->
       <section id="work" class="annoying">
         <h2>Work</h2>
@@ -37,7 +48,7 @@
           <!-- Noodle work: work I want to highlight the most, takes doubel the size in computer browser and first -->
           <article class="annoying">
             <h3>Foodie Digest</h3>
-            <a href="http://foodie-digest.herokuapp.com/" class="mainwork">
+            <a href="https://foodie-digest.herokuapp.com/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -65,8 +76,8 @@
             </a>
           </article>
           <article class="annoying">
-            <h3>Password Generator</h3>
-            <a href="https://jtrevz.github.io/passwordgenerator/" class="mainwork">
+            <h3>Weather Forecast</h3>
+            <a href="https://jtrevz.github.io/weatherforecast/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -74,8 +85,8 @@
               />
             </a>
             <p class="left">l</p>
-            <h3>Weather Forecast</h3>
-            <a href="https://jtrevz.github.io/weatherforecast/" class="mainwork">
+            <h3>Workday Planner</h3>
+            <a href="https://jtrevz.github.io/workdayplanner/" class="mainwork">
               <img
                 src="https://nga.gov.au/artnouveau/images/52128_banner.jpg"
                 alt="Art Nouveau Flower Wallpaper"
@@ -96,6 +107,7 @@
             >
           </li>
           <li><a href="https://github.com/jtrevz">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/jennifertrevizo/">LinkedIn</a></li>
         </ul>
       </section>
     </main>
